# doc-insights

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  start_services.sh
app/: log.py  main.py
app/chat/: constants.py  engine.py  qa_response_synth.py  splitters.py  utils.py  zk_title_enhance.py
app/models/: schema.py
