[tool.poetry]
name = "doc-insights"
version = "0.1.0"
description = "QA over fund documents"
authors = ["Dreamsome <onesuperclark@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pydantic = "^1.10.8"
fastapi = "^0.70.0"
streamlit = "^1.27.0"
uvicorn = "^0.15.0"
pypdf = "^3.5.2"
llama-index = "^0.8.51"
nltk = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"
mypy = "^0.910"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"