[tool.poetry]
name = "doc-insights"
version = "0.1.0"
description = "QA over fund documents"
authors = ["Dreamsome <onesuperclark@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pydantic = "^1.10.8"
fastapi = "^0.70.0"
streamlit = "^1.27.0"
uvicorn = "^0.15.0"
pypdf = "^3.5.2"
llama-index = "^0.9.4"
nltk = "^3.8.1"
transformers = "^4.31.0"

[tool.poetry.dev-dependencies]
black = "23.10.1"
flake8 = "6.1.0"
mypy = "1.6.1"
isort = "5.12.0"
pre-commit = "3.5.0"
pytest = "7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"